Fixed RWD for search component look at mobile resolutions and posts spacing.

--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.8);
@@ -28,4 +29,13 @@ h1 {
 
 .search button {
   padding: 5px;
+}
+
+@media (orientation: landscape) and (min-width:768px) {
+
+  .header {
+    justify-content: space-between;
+    flex-wrap: nowrap;
+  }
+
 }
